--- a/src/index.css
+++ b/src/index.css
@@ -45,9 +45,13 @@ body {
 
 /* Titulares */
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2rem;
+  line-height: 1.15;
+  margin: 0;
 }
+
+/* Layout safety */
+* { box-sizing: border-box; }
 
 /* Botones */
 button {
